# dodibot

./: .env.bak.20260704_122432  .env.example  .gitignore  HOW_TO_USE.md  README.md  START_HERE.txt  bot.py  pyproject.toml  railway.json  requirements.txt  run-dashboard.bat  run-dev.bat  run.bat  setup.bat  setup.py  setup.sh
assets/: premium_emojis.json
scripts/: dev-reload.ps1
src/: config.py  main.py
src/admin_dashboard/: server.py
src/admin_dashboard/templates/: base.html  deposit_settings.html  home.html  login.html  payments.html  products.html
src/db/: models.py  seed.py  session.py
src/handlers/: admin.py  deposit.py  profile.py  refer.py  shop.py  states.py
src/repositories/: deposits.py  orders.py  payments.py  products.py  users.py  withdrawals.py
src/services/: binance.py  canboso.py  deposit_settings.py  deposit_verification.py  payment_flow.py  payment_verification.py  shop.py  wallet.py
src/ui/: emoji.py  keyboards.py  texts.py
tests/: test_deposits.py
