[project]
name = "batman-bot"
version = "0.1.0"
description = "Batman Bot Telegram store with premium UX, wallet, referrals and admin dashboard."
authors = [{ name = "Batman" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4",
    "aiohttp>=3.9,<4",
    "SQLAlchemy>=2.0,<3",
    "aiosqlite>=0.20",
    "asyncpg>=0.29.0",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "qrcode[pil]>=7.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "bcrypt>=4.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
